Fix support for path=@queryFile stored queries.