@@ -24,6 +24,7 @@ import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.List;
@@ -31,7 +32,6 @@ import java.util.Properties;
 import java.util.concurrent.CountDownLatch;
 
 import org.apache.commons.cli.CommandLine;
-import org.apache.commons.io.FileUtils;
 
 /**
  * @author sykorjan
@@ -119,7 +119,7 @@ public final class HalyardEndpoint extends AbstractHalyardTool {
                     }
                     storedQueries.replaceAll((Object key, Object value) -> {
                         try {
-                            return value.toString().startsWith("@") ? FileUtils.readFileToString(Paths.get(qf).resolveSibling(value.toString().substring(1)).toFile(), StandardCharsets.UTF_8) : value;
+                            return value.toString().startsWith("@") ? Files.readString(Paths.get(qf).resolveSibling(value.toString().substring(1)), StandardCharsets.UTF_8) : value;
                         } catch (IOException ex) {
                             throw new UncheckedIOException(ex);
                         }
